bk_ida/gccida/c0/c_safe_from_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_safe_from_p/src/c-common.c:4132:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( statement_code_p( ( tree_code)( unsigned __int8)*( ( _DWORD *)&exp->common + 4)) && exp->common.chain ) 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_safe_from_p/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_safe_from_p/src/c-common.c:4132:38: error: expected expression
if ( statement_code_p( ( tree_code)( unsigned __int8)*( ( _DWORD *)&exp->common + 4)) && exp->common.chain ) 
                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_safe_from_p/src/obj/c-common.o] Error 1
